# margot-aspect

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPugiXML.cmake
include/: AdviceGenerator.h  AspectGenerator.h  AspectParser.h  FunctionMonitor.h  FunctionMonitorGenerator.h  GoalTuner.h  MonitorGenerator.h  RegionMonitor.h  SelfTuneGenerator.h  StateTuner.h  TunerElements.h
res/: XML Configuration File User Manual.lyx  margotaspect_desc_language.dtd
src/: AdviceGenerator.cpp  AspectGenerator.cpp  AspectParser.cpp  FunctionMonitor.cpp  FunctionMonitorGenerator.cpp  GoalTuner.cpp  MonitorGenerator.cpp  RegionMonitor.cpp  SelfTuneGenerator.cpp  StateTuner.cpp  TunerElements.cpp  main.cpp
test/margot_tutorial/: CMakeLists.txt  autotuning_conf.xml  oplist.bar.conf  oplist_conf.xml  test.cpp  test_aspect.xml
test/margot_tutorial/margot_heel_if/config/: autotuning.conf  oplist.foo.conf
test/margot_tutorial/src/: test.cpp
